--- a/public/index.html
+++ b/public/index.html
@@ -10,3 +10,6 @@
 <body>
     <main></main>
 </body>
+<script src="https://kit.fontawesome.com/473d269aa9.js" crossorigin="anonymous"></script>
+
+</html>
